# network_experiment

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.flooder  Dockerfile.server  Dockerfile.server-noisy  Vagrantfile  Vagrantfile.helios  Vagrantfile.helios_master  Vagrantfile.helios_worker  Vagrantfile.k8_master  Vagrantfile.k8_worker  Vagrantfile.swarm  Vagrantfile.swarm_master  Vagrantfile.swarm_worker  bootstrap.sh  bootstrap_helios.sh  bootstrap_helios_sep.sh  bootstrap_marathon.sh  bootstrap_swarm.sh  kubelet.service  runner.py
Vagrantfiles/: Vagrantfile.helios  Vagrantfile.k8
analysis/: Pipfile  analyze.py  analyzer.py  client_times  compare_platforms.py  deception.py  duration_sensitivity.py  flooder.not_real.py  flooder.rtf  generate_representative.py  noise_analysis.py  orchestrationplatform.py  orchestrator_compare.py  outliers_filter_mode.py  perf.py  plot_cycles.py  plot_paper_rtt_235s_trace.py  plotter.py  rocs.py  runner.py  success_rates.py  temp_log
client/: .logfile.txt.icloud  CMakeLists.txt  Makefile  analyze.py  client.c  client.h  client_times  main.c
common/: ccommon.c  ccommon.h
flooder/: CMakeLists.txt  (+7 more)
noise/: CMakeLists.txt  main.c  noise.c  noise.h
packet_sink/: .gitignore  CMakeLists.txt  Makefile  flooder_times  main.c  sink  sink.c  sink.h
server/: CMakeLists.txt  Dockerfile  Makefile  main.c  server  server-noise-runner.py  server.c  server.yaml
server/workloads/: memcached-workload-0  memcached-workload-10  memcached-workload-100  memcached-workload-20  memcached-workload-30  memcached-workload-40  memcached-workload-50  memcached-workload-60  memcached-workload-70  memcached-workload-80  memcached-workload-90
(+52 files in other folders)
